VPC-EC2/1-vpc.tf
resource "aws_vpc" "custom_vpc" {
  cidr_block = "10.0.0.0/16" # IP ranges available inside the vpc
  instance_tenancy = "default"

  tags = {
    "Name" = "custom_vpc"
  }
}
